2004-03-02  Bruno Haible  <bruno@clisp.org>

	* read-csharp.c (msgdomain_read_csharp): Extend the lang -> frobbedlang
	mapping so as to support Serbian and Uzbek locales.
	* write-csharp.c (msgdomain_write_csharp): Likewise.
	Reported by Jorn Baayen <jbaayen@dds.nl>.

2004-02-27  Bruno Haible  <bruno@clisp.org>

	* plural-table.c (plural_table): Add an entry about Serbian.
	Reported by Danilo Segan <danilo@gnome.org>.

2004-01-29  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.1 released.

2004-01-28  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14 released.

2004-01-18  Bruno Haible  <bruno@clisp.org>

	* msginit.c (catalogname_for_locale): Add entries for Akan, Avaric,
	Bambara, Cree, Divehi (Maldivian), Éwé, Igbo, Kongo, Kanuri, Ganda,
	Luba-Katanga, Ojibwa, Venda.
	(englishname_of_language): Likewise, and also for Fulah (Fulfulde).

2004-01-09  Bruno Haible  <bruno@clisp.org>

	* format.h (struct formatstring_parser): Add 'translated' argument to
	parse function.
	(get_sysdep_c_format_directives): Renamed from
	get_c99_format_directives. Add 'translated' argument. Change meaning
	of endpos in returned array.
	* format-c.c (struct spec): Rename field c99_directives to
	sysdep_directives, and c99_directives_count to sysdep_directives_count.
	(format_parse): Add 'translated' argument. Handle 'I' flag. Store the
	pointer past the '>' character instead of the pointer to the '>'.
	(format_c_parse, format_objc_parse): Add 'translated' argument.
	(get_sysdep_c_format_directives): Renamed from
	get_c99_format_directives. Add 'translated' argument.
	* format-awk.c (format_parse): Add 'translated' argument.
	* format-csharp.c (format_parse): Likewise.
	* format-elisp.c (format_parse): Likewise.
	* format-gcc-internal.c (format_parse): Likewise.
	* format-java.c (format_parse): Likewise.
	* format-librep.c (format_parse): Likewise.
	* format-lisp.c (format_parse): Likewise.
	* format-pascal.c (format_parse): Likewise.
	* format-perl-brace.c (format_parse): Likewise.